# SDAquickies

./: setup.cfg
src/SDAquickies/: process_files.py
