[metadata]
name = SDAquickies
version = 0.0.1
author = DudeAgreesDumbly
author_email = dudeagreesdumbly@gmail.com
description = Finds files in current directory given an extension and creates a concatenated datafraame of them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DudeAgreesDumbly/SDAquickies
project_urls =
    Bug Tracker = https://github.com/DudeAgreesDumbly/SDAquickies/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src